--- a/changeset-cicd.yml
+++ b/changeset-cicd.yml
@@ -1516,7 +1516,7 @@ Resources:
           OutputArtifacts:
             - Name: SourceOutput2
           Configuration:
-            FunctionName: ChangeSetDetailsFunction
+            FunctionName: !Ref ChangeSetDetailsFunction
             UserParameters: !Join [ '-', [ !Ref ApplicationName, !Ref EnvironmentClass, 'Stack' ] ]
           RunOrder: 4
         - Name: ApproveChangeSet
