--- a/changeset-cicd.yml
+++ b/changeset-cicd.yml
@@ -82,6 +82,7 @@ Parameters:
  SlackWebhookUrl:
     Description: Incoming Webhook url for slack after you create your app, store and encrypt in parameter store, It should be of form {{resolve:ssm-secure:<key-name>:<version>}}'
     Type: String
+    Default: 'https://hooks.slack.com/services/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'
  SlackChannel:
     Description: Slack Channel where approvals needs to be sent
     Type: String
@@ -832,7 +833,6 @@ Resources:
   
 
   CodePipelineSNSTopic:
-    DependsOn: ApprovalRequesterFunction
     Type: 'AWS::SNS::Topic'
     Condition: NotSTGEnvironment
     Properties:
@@ -845,11 +845,10 @@ Resources:
     Condition: NotSTGEnvironment
     Properties:
       Subscription:
-      - Endpoint: !Ref SNSEmail
-        Protocol: email
+      - Endpoint: !GetAtt 'ChangeSetDetailsFunction.Arn'
+        Protocol: lambda
 
   pipelinesevent:
-    DependsOn: Codepipelinestatusfunction
     Type: 'AWS::SNS::Topic'
     Condition: NotSTGEnvironment
     Properties:
@@ -906,7 +905,7 @@ Resources:
     Condition: NotSTGEnvironment
     Properties:
       Description:  to get details of a changeset
-      Handler: index.handler
+      Handler: lambda_handler.handler
       Role: !GetAtt LambdaServiceRole.Arn
       Runtime: python3.7
       Tags:
@@ -1507,7 +1506,7 @@ Resources:
             TemplateConfiguration: SourceOutput::IAC/newspec-param-isen2.json
             TemplatePath: SourceOutput::IAC/newspec.yml
           RunOrder: 3
-        - Name: ChangesetDetails
+        - Name: ViewChangeset
           ActionTypeId:
             Category: Invoke
             Owner: AWS
@@ -1573,7 +1572,7 @@ Resources:
         Name: Deploy
         Actions:
         -
-          Name: CloudFormation
+          Name: CreateOrUpdateStack
           InputArtifacts:
             - Name: SourceOutput  
           ActionTypeId:
