--- a/changeset-cicd.yml
+++ b/changeset-cicd.yml
@@ -89,7 +89,7 @@ Parameters:
  SlackApprovalMembers:
     Description: List of AD account of the member who can perform the slack approval for CICD.
     Type: String
-    Default: sanksu   
+    Default: t_sanksu   
  NotificationsSNSTopic:
     Description: ARN of the SNS topic that will be used for notifications on the pipeline (if not specified a new one will be created).
     Type: String
